--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
+<!doctype html>
 <html>
+
     <head>
         <title>Tip Calculator</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <!-- normalize.css -->
+        <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
+        <!-- styles.css -->
+        <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
     </head>
     <body>
         <div id="container">
             <h1>Tip Calculator</h1>
+
             <div id="calculator">
+
                 <form>
                     <label>
                         How much was your bill?<br>  
@@ -25,7 +32,7 @@
                      </label>
                      <label>
                          How many people are sharing the bill?<br>
-                         <input type="text" id="totalPeople">people
+                         <input type="text" id="totalPeople"> people
                     </label>
                     <button type="button" id="calculate">Calculate!</button>
                 </form>
